samples/_failures_safe/1761076739_f71834_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4e39b55.c: In function ‘main’:
./samples/SAFE/__tmp_c4e39b55.c:159:5: error: expected declaration or statement at end of input
  159 |     printf("--------\n");
      |     ^~~~~~
